--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Chat Application</title>
+    <link rel="stylesheet" href="styles/main.css">
+
 </head>
 <body>
-$END$
+<header>
+    <h1>Chat App</h1>
+    <nav>
+        <a class="links" href="/register">Register</a>
+        <a class="links" href="/login">Login</a>
+        <a class="links" href="/chat-room">Chat Room</a>
+    </nav>
+</header>
+
+
+
+<div class ="margin-top">
+    Welcome to our <b>chat </b>Application
+</div>
+
 </body>
 </html>
